Fix font sizing on post elements and adjust max width of container on smaller viewports

--- a/_assets/stylesheets/_foundation.scss
+++ b/_assets/stylesheets/_foundation.scss
@@ -15,11 +15,7 @@
 $serif: "freight-text-pro", Georgia, "Times New Roman", serif;
 $sans-serif: "freight-sans-pro", Helvetica, Arial, sans-serif;
 
-$body-size: 18px;
-
 body {
-  font-size: $body-size;
-  font-weight: normal;
   -webkit-font-smoothing: antialiased;
 }
 
